# mp123

./: .bumpversion.cfg  .pylintrc  README.md  install.sh  pyproject.toml  rav.yaml  requirements-local.txt  requirements.txt
mv123/: mv123.py
scripts/: pytest.sh
src/: __init__.py  mp123.py  pbcopy.py
tests/: test_mp123.py
