[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mp123"
version = "1.0.0"
authors = [
  { name="Pedro Mayorga", email="ppmayorga80@gmail.com" },
]
description = "MP123 for cleaning and renaming files for mp3 players"
readme = "README.md"
requires-python = ">=3.7"

dynamic = ["dependencies"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.scripts]
mp123 = "mp123:main"
